# HackAgent

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run_web.py  setup_api_key.py  tsconfig.json
config/: settings.yaml  tools.yaml
core/: agent.py  config.py  page_analyzer.py  sandbox.py  utils.py
data/: attack_surface.json
firefox_extension/: manifest.json
firefox_extension/background/: background.js
firefox_extension/content/: content.js
firefox_extension/popup/: popup.css  popup.html  popup.js
interfaces/: cli.py
models/: anthropic_client.py  openai_client.py  router.py
orchestrator/: Dockerfile  orchestrator.py
src/backend/: server.ts
src/backend/models/: types.ts
src/backend/services/: openai-client.ts  page-analyzer.ts
src/main/: backend-manager.ts  main.ts  preload.ts
src/renderer/: app.js  index.html
src/renderer/services/: tts-service.ts
src/renderer/styles/: style.css
src/renderer/views/: settings.ts
tasks/: forensics_task.py  recon_task.py
tests/: test_budget.py  test_config.py  test_safety.py  test_sandbox.py  test_utils.py
tools/: file_analysis.py  network_recon.py  shell_safe.py  vuln_analysis.py  web_recon.py
web/: app.py
web/static/css/: style.css
web/static/js/: app.js
web/templates/: index.html
workers/: Dockerfile  safety_rules.yaml  tools_whitelist.json  worker.py
