[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackagent"
version = "0.1.0"
description = "Safe, analysis-only AI agent for CTFs, labs, and lawful bug-bounty workflows"
requires-python = ">=3.10"
license = {text = "EPL-2.0"}
dependencies = [
    "anthropic>=0.35.0",
    "PyYAML",
    "jsonschema",
    "psutil",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
hackagent = "interfaces.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["core*", "models*", "tasks*", "tools*", "interfaces*", "orchestrator*"]
